# BinaryChess

./: CMakeLists.txt  README.md
src/: game.cpp  game.h  gui.cpp  gui.h  lookUpTables.h  main.cpp  moveGen.cpp  moveGen.h  moveGenerator.cpp  moveGenerator.h  search.cpp  search.h  tt.cpp  tt.h  utils.h  zobrist.cpp  zobrist.h
